[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/enemy_3_fire.gd" type="Script" id=1]
[ext_resource path="res://wad/gfx/pedra clone-2.png.png" type="Texture" id=2]
[ext_resource path="res://wad/gfx/pedra clone-3.png.png" type="Texture" id=3]
[ext_resource path="res://wad/gfx/pedra clone-4.png.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 3.25718, 3.3021 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 3.85638, 3.76603 )

[node name="enemy_3_fire" type="RigidBody2D"]

input_pickable = false
collision_layer = 256
collision_mask = 6
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Visibility" ]

[node name="enemy_3_fire_sprite" type="AnimatedSprite" parent="." index="0"]

modulate = Color( 1, 0.684692, 0.015625, 1 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 2 )
animation = "default"
frame = 1
playing = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="enemy_3_collision" type="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 3 )

[node name="enemy_3_fire_area_hit" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 38
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="enemy_3_collision_area_hit" type="CollisionShape2D" parent="enemy_3_fire_area_hit" index="0"]

visible = false
shape = SubResource( 4 )

[node name="enemy_3_fire_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="area_entered" from="enemy_3_fire_area_hit" to="." method="_on_enemy_3_fire_area_hit_area_entered"]

[connection signal="timeout" from="enemy_3_fire_timer" to="." method="_on_enemy_3_fire_timer_timeout"]


